--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>My Sixth HTML Assignment with CSS</title>
 </head>
 <body>
-    <h1>Welcome to CSS</h1>
+    <h1 style="color: red;">Welcome to CSS</h1>
 </body>
 </html>
