--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="all_css/style_css">
     <title>My Sixth HTML Assignment with CSS</title>
+    <link rel="stylesheet" href="all_css/style_css">
 </head>
 <body>
     <h1 style="color: red;">Welcome to CSS</h1>
-    <h3>Stopping by Woods on a Snowy Evening<br>ROBERT FROST</h3>
+    <h3>Stopping by Woods on a Snowy Evening<br>by ROBERT FROST</h3>
     <p> Whose woods these are I think I know.<br>   
         His house is in the village though;<br>    
         He will not see me stopping here   <br> 
