--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Sixth HTML Assignment with CSS</title>
-    <link rel="stylesheet" href="all_css/style_css">
+    <link rel="stylesheet" href="all_css/style.css">
 </head>
 <body>
     <h1 style="color: red;">Welcome to CSS</h1>
@@ -29,6 +29,12 @@
         But I have promises to keep,   <br> 
         And miles to go before I sleep,   <br> 
         And miles to go before I sleep.  <br>  
-        </p>
+    </p>
+    <ul>
+        <li><a href="/pages/about.html">About us</a></li>
+        <li><a href="/pages/contact.html">Contact us</a></li>
+        <li><a href="/pages/services.html">Our Services</a></li>
+    </ul>
+
 </body>
 </html>
