--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
         And miles to go before I sleep.  <br>  
     </p>
     <ul>
-        <li><a href="/pages/about.html">About us</a></li>
-        <li><a href="/pages/contact.html">Contact us</a></li>
-        <li><a href="/pages/services.html">Our Services</a></li>
+        <li><a href="pages/about.html">About us</a></li>
+        <li><a href="pages/contact.html">Contact us</a></li>
+        <li><a href="pages/services.html">Our Services</a></li>
     </ul>
-
 </body>
 </html>
