--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Sixth HTML Assignment with CSS</title>
-    <link rel="stylesheet" href="all_css/style.css">
+    <link rel="stylesheet" href="all_css/main_style.css">
 </head>
 <body>
     <h1 style="color: red;">Welcome to CSS</h1>
