--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us|My Sixth HTML Assignment with CSS</title>
-    <link rel="stylesheet" href="all_css/contact_style.css">
+    <link rel="stylesheet" href="../all_css/contact_style.css">
 </head>
 <body>
+    <h1>This is Our Contact Page</h1>
+    
+    <hr>
+    <a href="../index.html">Return to Homepage</a>
     
 </body>
 </html>
