--- a/pages/about.html
+++ b/pages/about.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us|</title>
+
+    <style>
+        body{
+            background-color: orange;
+        }
+    </style>
 </head>
 <body>
+    <h1>This is Our About Page</h1>
     <p>Africa my Africa<br>
         Africa of proud warriors in ancestral Savannahs<br>
         Africa of whom my grandmother sings<br>
