--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
         <label for="lname">Last Name</label>
         <input type="text" id="lname"><br>
         <label for="phone">Phone Number</label>
-        <input type="number" name="number" id="08080000000"><br>
+        <input type="number" name="number" id="11"><br>
         <label for="email">Email</label>
         <input type="email" id="email"><br>
         <label for="Gender">Gender</label>
