--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,7 +29,7 @@
             <option value="maya">Maya Angelou</option>
             <option value="frost">Robert Frost</option>
             <option value="poe">Edgar Alan Poe</option>
-            <option value="shakespeare">William Shakespeare</option>
+            <option value="diop">David Diop</option>
             <option value="dickinson">Emily Dickinson</option>
             <option value="hughes">Langston Hughes</option></select>
         <br>
