--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>This is Our Contact Page</h1>
-    <form action="mailto:bitekechy@gmail.com" method="get" enctype="text/plain">
+    <form action="mailto:bitekechy@gmail.com" method="post" enctype="text/plain">
         <label for="fname">First Name</label>
         <input type="text" id="fname"><br>
         <label for="lname">Last Name</label>
