--- a/pages/services.html
+++ b/pages/services.html
@@ -10,6 +10,9 @@
         body{
             background-color: grey;
         }
+        h3{
+            color: cyan;
+        }
         ol{
             color: cyan;
         }
